syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.hugovallada";
option java_outer_classname = "Transaction";
option objc_class_prefix = "HLW";

package com.github.hugovallada;

import "google/protobuf/timestamp.proto";

service TransactionService {
  rpc find (TransactionGrpcRequest) returns (TransactionsGrpcResponse) {}
}

message TransactionGrpcRequest {
  string creditCard = 1;
}

message TransactionGrpcResponse {
  string id = 1;
  string creditCard = 2;
  string value = 3;
  string establishment = 4;
  google.protobuf.Timestamp date = 5;
}

message TransactionsGrpcResponse{
  repeated TransactionGrpcResponse transactions = 1;
}